--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     implementation 'org.apache.commons:commons-lang3:3.7'
 
-
+    // TensorFlow Lite
+    implementation 'org.tensorflow:tensorflow-lite:2.11.0'
+    // For GPU acceleration
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.11.0'
+    // For TensorFlow Lite with support for models that require
+    // TensorFlow Lite's extra features like quantization and optimization
+    implementation 'org.tensorflow:tensorflow-lite-support:0.4.3'
 }
