redo commit: add button to history on main app page & update AndroidManifest.xml accordingly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,10 @@
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".summary.ActivitySummaryActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
